[SYNCOPE-1538] Cleanup